--- a/client/public/assets/css/main.css
+++ b/client/public/assets/css/main.css
@@ -41,6 +41,20 @@ body {
 	border: 1px solid #BBB;
 	box-shadow: 0px 0px 50px 10px rgba(0,0,0,0.15);
 }
+#board .loading-screen {
+	background: rgba(255,255,255,0.3);
+	display: none;
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	z-index: 30;
+	cursor: wait;
+}
+#board.loading .loading-screen {
+	display: block;
+}
 #board table {
 	width: 100%;
 }
@@ -50,11 +64,15 @@ body {
 #board table tr td .line {
 	z-index: 10;
 	position: absolute;
+	background-color: #FFF;
+	transition: all 0.2s ease;
 }
 #board table tr td .line.hover {
-	background: #AAA;
+	background-color: #AAA;
 }
-#board table tr td .line.filled { background: #666 !important; }
+#board table tr td .line.filled {
+	background-color: #666 !important;
+}
 
 #board table tr td .line.top-line { top: -3px; left: 0; right: 0; }
 #board table tr td .line.bottom-line { bottom: -3px; left: 0; right: 0; }
