--- a/client/public/assets/css/main.css
+++ b/client/public/assets/css/main.css
@@ -7,7 +7,7 @@ body {
 #header {
 	position: relative;
 	padding: 0 50px;
-	width: 700px;
+	width: 325px;
 	margin: 30px auto;
 }
 #header h1 {
@@ -39,7 +39,7 @@ body {
 	cursor: pointer;
 	padding: 17px 15px;
 	border: 1px solid #BBB;
-	box-shadow: 0px 0px 50px 10px rgba(0,0,0,0.15);
+	box-shadow: 0px 0px 20px 5px rgba(0,0,0,0.15);
 }
 #board .loading-screen {
 	background: rgba(255,255,255,0.3);
@@ -53,6 +53,32 @@ body {
 	cursor: wait;
 }
 #board.loading .loading-screen {
+	display: block;
+}
+#board .finished-screen {
+	background: rgba(0,0,0,0.8);
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	display: none;
+	left: 0;
+	right: 0;
+	z-index: 35;
+	color: #FFF;
+	cursor: pointer;
+}
+#board .finished-screen .finished-message {
+	text-align: center;
+	position: absolute;
+	top: 50%;
+	left: 0;
+	right: 0;
+	font-size: 30px;
+	height: 32px;
+	line-height: 32px;
+	margin-top: -16px;
+}
+#board.finished .finished-screen {
 	display: block;
 }
 #board table {
@@ -74,10 +100,10 @@ body {
 	background-color: #666 !important;
 }
 
-#board table tr td .line.top-line { top: -3px; left: 0; right: 0; }
-#board table tr td .line.bottom-line { bottom: -3px; left: 0; right: 0; }
-#board table tr td .line.left-line { left: -3px; top: 0; bottom: 0; }
-#board table tr td .line.right-line { right: -3px; top: 0; bottom: 0; }
+#board table tr td .line.top-line { top: -4px; left: 0; right: 0; }
+#board table tr td .line.bottom-line { bottom: -4px; left: 0; right: 0; }
+#board table tr td .line.left-line { left: -4px; top: 0; bottom: 0; }
+#board table tr td .line.right-line { right: -4px; top: 0; bottom: 0; }
 #board table tr td .line.top-line,
 #board table tr td .line.bottom-line {
 	height: 5px;
@@ -91,8 +117,8 @@ body {
 	z-index: 11;
 	background: #AAA;
 	position: absolute;
-	width: 10px;
-	height: 10px;
+	width: 7px;
+	height: 7px;
 	border-radius: 5px;
 }
 #board table tr td .dot.dot-top-left { top: -5px; left: -5px; }
