--- a/client/public/assets/css/main.css
+++ b/client/public/assets/css/main.css
@@ -1,5 +1,7 @@
 body {
 	background: #F0F0F0;
+	background: url('../images/logo-unisociesc.png') 10px 10px no-repeat;
+	background-size: 80px;
 	color: #666;
 	font-family: Arial;
 	text-align: center;
@@ -14,6 +16,9 @@ body {
 	color: #666;
 	font-size: 30px;
 	margin: 0;
+}
+#header .logo {
+	width: 65px;
 }
 #header .score {
 	position: absolute;
@@ -31,6 +36,11 @@ body {
 #header .score .points {
 	font-size: 25px;
 }
+#footer {
+	color: #999;
+	padding-top: 15px;
+	font-size: 13px;
+}
 #board {
 	width: 800px;
 	position: relative;
@@ -39,7 +49,7 @@ body {
 	cursor: pointer;
 	padding: 17px 15px;
 	border: 1px solid #BBB;
-	box-shadow: 0px 0px 20px 5px rgba(0,0,0,0.15);
+	box-shadow: 0px 0px 20px 1px rgba(0,0,0,0.15);
 }
 #board .loading-screen {
 	background: rgba(255,255,255,0.3);
@@ -130,10 +140,10 @@ body {
 	position: relative;
 }
 .square.human-player {
-	background: #DCF361;
+	background: #609CEF;
 }
 .square.bot-player {
-	background: #A0D1FB;
+	background: #EA6F72;
 }
 .square:before {
 	display: block;
