Suporte ao Docker

--- a/client/public/assets/css/main.css
+++ b/client/public/assets/css/main.css
@@ -133,7 +133,7 @@ body {
 	background: #DCF361;
 }
 .square.bot-player {
-	background: #A0D1FB;
+	background: #EA6F72;
 }
 .square:before {
 	display: block;
